--- a/rsa_swt_tool/pom.xml
+++ b/rsa_swt_tool/pom.xml
@@ -13,6 +13,62 @@
             <artifactId>bcprov-jdk14</artifactId>
             <version>138</version>
         </dependency>
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.6</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.core.commands</groupId>
+            <artifactId>eclipse_core_commands</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.core.runtime</groupId>
+            <artifactId>eclipse_core_runtime</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.equinox.common</groupId>
+            <artifactId>eclipse_core_equinox_common</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.equinox.event</groupId>
+            <artifactId>eclipse_core_equinox_event</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.jface</groupId>
+            <artifactId>eclipse_core_jface</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>xfire.all</groupId>
+            <artifactId>xfire-all</artifactId>
+            <version>1.2.6</version>
+        </dependency>
+        <dependency>
+            <groupId>swt.util.windows.x86</groupId>
+            <artifactId>swt_util_windows_x86</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>swt.win.x64</groupId>
+            <artifactId>swt-win-x64</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>KeyUtilApp</groupId>
+            <artifactId>KeyUtilApp</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>alipay_sign</groupId>
+            <artifactId>alipay_sign</artifactId>
+            <version>1.0.0</version>
+        </dependency>
     </dependencies>
 
 
