--- a/rsa_swt_tool/pom.xml
+++ b/rsa_swt_tool/pom.xml
@@ -4,9 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>rsa_swt_tool</groupId>
-    <artifactId>com.zz.rsa.tool</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <groupId>com.zz.rsa.tool</groupId>
+    <artifactId>rsa_swt_tool</artifactId>
+    <version>1.0</version>
     <dependencies>
         <dependency>
             <groupId>bouncycastle</groupId>
